Final Evaluation on Test Set

--- a/notebooks/02_modeling_evaluation.ipynb
+++ b/notebooks/02_modeling_evaluation.ipynb
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "82aa04f2",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
    "source": [
     "print(\"MODEL COMPARISON ON VALIDATION SET\\n\")\n",
     "\n",
-    "# Evaluate Logistic Regression\n",
+    "# Evaluate Logistic Regression on validation set\n",
     "lr_val_results = evaluate_classifier(\n",
     "    logistic_regression_model,\n",
     "    X_val_preprocessed,\n",
@@ -582,7 +582,7 @@
     "    \"val\"\n",
     ")\n",
     "\n",
-    "# Evaluate Random Forest\n",
+    "# Evaluate Random Forest on validation set\n",
     "rf_val_results = evaluate_classifier(\n",
     "    random_forest_model,\n",
     "    X_val_preprocessed,\n",
@@ -591,7 +591,7 @@
     "    \"val\"\n",
     ")\n",
     "\n",
-    "# Evaluate XGBoost (with label encoder)\n",
+    "# Evaluate XGBoost (with label encoder) on validation set\n",
     "xgb_val_results = evaluate_classifier(\n",
     "    xgboost_model,\n",
     "    X_val_preprocessed,\n",
@@ -639,6 +639,153 @@
     "comparison_df = pd.DataFrame(comparison_data)\n",
     "print(comparison_df.to_string(index=False))\n",
     "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adfa561c",
+   "metadata": {},
+   "source": [
+    "**MODEL EVALUATION ON VALIDATION SET**\n",
+    "\n",
+    "| Model                 | Accuracy | Macro-F1 | Weighted-F1 | Precision (Macro) | Recall (Macro) |\n",
+    "|-----------------------|----------|----------|-------------|-------------------|---------------|\n",
+    "| Logistic Regression   | 0.694    | 0.343    | 0.778       | 0.276             | 0.757         |\n",
+    "| Random Forest         | 0.985    | 0.881    | 0.984       | 0.934             | 0.845         |\n",
+    "| XGBoost               | 0.978    | 0.839    | 0.978       | 0.896             | 0.803         |\n",
+    "\n",
+    "\n",
+    "Logistic Regression demonstrates noticeably weaker performance on the validation set, particularly in macro-F1 and macro-precision, reflecting limited ability to handle minority classes. \n",
+    "\n",
+    "Random Forest stands out as the top performer by a considerable margin; it achieves the highest accuracy and robust scores across all metrics, suggesting strong generalization. \n",
+    "\n",
+    "XGBoost also performs well - close to Random Forest - though it trails slightly in all reported metrics, highlighting it as a competitive but marginally less effective alternative on this dataset.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f764c9e0",
+   "metadata": {},
+   "source": [
+    "# Final Evaluation on Test Set "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0b04c311",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MODEL EVALUATION ON TEST SET\n",
+      "\n",
+      "Logistic Regression [test] | Accuracy: 0.699 | Macro-F1: 0.340 | Weighted-F1: 0.782 | Precision (Macro): 0.275 | Recall (Macro): 0.737\n",
+      "Random Forest [test] | Accuracy: 0.985 | Macro-F1: 0.868 | Weighted-F1: 0.984 | Precision (Macro): 0.918 | Recall (Macro): 0.833\n",
+      "XGBoost [test] | Accuracy: 0.979 | Macro-F1: 0.842 | Weighted-F1: 0.978 | Precision (Macro): 0.896 | Recall (Macro): 0.807\n",
+      "\n",
+      "TEST SET COMPARISON SUMMARY\n",
+      "\n",
+      "              Model  Accuracy  Macro-F1  Weighted-F1  Precision (Macro)  Recall (Macro)\n",
+      "Logistic Regression  0.698592  0.340070     0.782430           0.274578        0.737439\n",
+      "      Random Forest  0.984712  0.868455     0.984154           0.918019        0.832839\n",
+      "            XGBoost  0.978624  0.841901     0.977909           0.896363        0.807213\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MODEL EVALUATION ON TEST SET\\n\")\n",
+    "\n",
+    "# Evaluate Logistic Regression on test set\n",
+    "lr_test_results = evaluate_classifier(\n",
+    "    logistic_regression_model,\n",
+    "    X_test_preprocessed,\n",
+    "    y_test,\n",
+    "    \"Logistic Regression\",\n",
+    "    \"test\"\n",
+    ")\n",
+    "\n",
+    "# Evaluate Random Forest on test set\n",
+    "rf_test_results = evaluate_classifier(\n",
+    "    random_forest_model,\n",
+    "    X_test_preprocessed,\n",
+    "    y_test,\n",
+    "    \"Random Forest\",\n",
+    "    \"test\"\n",
+    ")\n",
+    "\n",
+    "# Evaluate XGBoost on test set (with label encoder)\n",
+    "xgb_test_results = evaluate_classifier(\n",
+    "    xgboost_model,\n",
+    "    X_test_preprocessed,\n",
+    "    y_test,\n",
+    "    \"XGBoost\",\n",
+    "    \"test\",\n",
+    "    label_encoder=label_encoder\n",
+    ")\n",
+    "\n",
+    "print(\"\\nTEST SET COMPARISON SUMMARY\\n\")\n",
+    "\n",
+    "# Create a comparison DataFrame for test set\n",
+    "test_comparison_data = {\n",
+    "    \"Model\": [\n",
+    "        lr_test_results[\"model_name\"],\n",
+    "        rf_test_results[\"model_name\"],\n",
+    "        xgb_test_results[\"model_name\"]\n",
+    "    ],\n",
+    "    \"Accuracy\": [\n",
+    "        lr_test_results[\"accuracy\"],\n",
+    "        rf_test_results[\"accuracy\"],\n",
+    "        xgb_test_results[\"accuracy\"]\n",
+    "    ],\n",
+    "    \"Macro-F1\": [\n",
+    "        lr_test_results[\"macro_f1\"],\n",
+    "        rf_test_results[\"macro_f1\"],\n",
+    "        xgb_test_results[\"macro_f1\"]\n",
+    "    ],\n",
+    "    \"Weighted-F1\": [\n",
+    "        lr_test_results[\"weighted_f1\"],\n",
+    "        rf_test_results[\"weighted_f1\"],\n",
+    "        xgb_test_results[\"weighted_f1\"]\n",
+    "    ],\n",
+    "    \"Precision (Macro)\": [\n",
+    "        lr_test_results[\"precision_macro\"],\n",
+    "        rf_test_results[\"precision_macro\"],\n",
+    "        xgb_test_results[\"precision_macro\"]\n",
+    "    ],\n",
+    "    \"Recall (Macro)\": [\n",
+    "        lr_test_results[\"recall_macro\"],\n",
+    "        rf_test_results[\"recall_macro\"],\n",
+    "        xgb_test_results[\"recall_macro\"]\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "test_comparison_df = pd.DataFrame(test_comparison_data)\n",
+    "print(test_comparison_df.to_string(index=False))\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "782c8fef",
+   "metadata": {},
+   "source": [
+    "**MODEL EVALUATION ON TEST SET**\n",
+    "\n",
+    "| Model                   | Accuracy | Macro-F1 | Weighted-F1 | Precision (Macro) | Recall (Macro) |\n",
+    "|-------------------------|----------|----------|-------------|-------------------|---------------|\n",
+    "| Logistic Regression     | 0.699    | 0.340    | 0.782       | 0.275             | 0.737         |\n",
+    "| Random Forest           | 0.985    | 0.868    | 0.984       | 0.918             | 0.833         |\n",
+    "| XGBoost                 | 0.979    | 0.842    | 0.978       | 0.896             | 0.807         |\n",
+    "\n",
+    "Random Forest remains the best performing model on the test set, achieving the highest accuracy, macro-F1, and macro-precision, showing excellent generalization. \n",
+    "\n",
+    "XGBoost also delivers strong results, slightly below Random Forest, while Logistic Regression shows much lower performance, especially on macro-F1 and precision, indicating challenges with the less-represented classes."
    ]
   }
  ],
