Feature Importance on Tree=Based Models

--- a/notebooks/02_modeling_evaluation.ipynb
+++ b/notebooks/02_modeling_evaluation.ipynb
@@ -952,6 +952,155 @@
     "\n",
     "Overall, XGBoost separates almost all classes best, showing that gradient-boosted trees work very well for this type of AIS classification."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8467fe0",
+   "metadata": {},
+   "source": [
+    "# Feature Importance on Tree-Based Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e801e575",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting feature names from preprocessor...\n",
+      "Total features after preprocessing: 23\n",
+      "First 10 features: ['num__sog' 'num__cog' 'num__heading' 'num__width' 'num__length'\n",
+      " 'num__draught' 'cat__shiptype_Cargo' 'cat__shiptype_Dredging'\n",
+      " 'cat__shiptype_Fishing' 'cat__shiptype_HSC']\n",
+      "\n",
+      "Random Forest Feature Importance:\n",
+      "Saved feature importance plot to: ../results/figures/modeling & evaluation/feature_importance_random_forest.png\n",
+      "\n",
+      "XGBoost Feature Importance:\n",
+      "Saved feature importance plot to: ../results/figures/modeling & evaluation/feature_importance_xgboost.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "def plot_feature_importance(model, feature_names, model_name, top_n=15, save_path=None):\n",
+    "    \"\"\"\n",
+    "    Plot feature importance as a horizontal bar chart.\n",
+    "    \n",
+    "    Args:\n",
+    "        model: Trained tree-based model with .feature_importances_ attribute\n",
+    "        feature_names: List of feature names\n",
+    "        model_name: Name of the model for title\n",
+    "        top_n: Number of top features to display\n",
+    "        save_path: Path to save the figure (optional)\n",
+    "    \"\"\"\n",
+    "    # Get feature importances\n",
+    "    importances = model.feature_importances_\n",
+    "    \n",
+    "    # Create DataFrame for easier sorting\n",
+    "    importance_df = pd.DataFrame({\n",
+    "        'feature': feature_names,\n",
+    "        'importance': importances\n",
+    "    }).sort_values('importance', ascending=False)\n",
+    "    \n",
+    "    # Get top N features\n",
+    "    top_features = importance_df.head(top_n)\n",
+    "    \n",
+    "    # Create plot\n",
+    "    fig, ax = plt.subplots(figsize=(10, max(8, top_n * 0.5)))\n",
+    "    ax.barh(range(len(top_features)), top_features['importance'], color='steelblue')\n",
+    "    ax.set_yticks(range(len(top_features)))\n",
+    "    ax.set_yticklabels(top_features['feature'])\n",
+    "    ax.set_xlabel('Feature Importance', fontsize=12)\n",
+    "    ax.set_title(f'Top {top_n} Feature Importances - {model_name}', fontsize=14, fontweight='bold', pad=20)\n",
+    "    ax.invert_yaxis()  # Highest importance at top\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    if save_path:\n",
+    "        plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
+    "        print(f\"Saved feature importance plot to: {save_path}\")\n",
+    "        # Use original show to display without triggering auto-save\n",
+    "        _plt_original_show()\n",
+    "        plt.close(fig)  # Close to prevent any further auto-saves\n",
+    "    else:\n",
+    "        plt.show()\n",
+    "\n",
+    "# Get feature names from the fitted preprocessor\n",
+    "print(\"Extracting feature names from preprocessor...\")\n",
+    "feature_names = preprocessor.get_feature_names_out()\n",
+    "print(f\"Total features after preprocessing: {len(feature_names)}\")\n",
+    "print(f\"First 10 features: {feature_names[:10]}\")\n",
+    "print()\n",
+    "\n",
+    "# Plot Random Forest feature importance \n",
+    "print(\"Random Forest Feature Importance:\")\n",
+    "plot_feature_importance(\n",
+    "    random_forest_model,\n",
+    "    feature_names,\n",
+    "    \"Random Forest\",\n",
+    "    top_n=15,\n",
+    "    save_path=os.path.join(FIG_DIR, \"feature_importance_random_forest.png\"),\n",
+    ")\n",
+    "\n",
+    "# Plot XGBoost feature importance \n",
+    "print(\"\\nXGBoost Feature Importance:\")\n",
+    "plot_feature_importance(\n",
+    "    xgboost_model,\n",
+    "    feature_names,\n",
+    "    \"XGBoost\",\n",
+    "    top_n=15,\n",
+    "    save_path=os.path.join(FIG_DIR, \"feature_importance_xgboost.png\"),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1ef34060",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOP FEATURES SUMMARY\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'feature_names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTOP FEATURES SUMMARY\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m rf_importances = pd.DataFrame({\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mfeature\u001b[39m\u001b[33m'\u001b[39m: \u001b[43mfeature_names\u001b[49m,\n\u001b[32m      5\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mimportance\u001b[39m\u001b[33m'\u001b[39m: random_forest_model.feature_importances_\n\u001b[32m      6\u001b[39m }).sort_values(\u001b[33m'\u001b[39m\u001b[33mimportance\u001b[39m\u001b[33m'\u001b[39m, ascending=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      8\u001b[39m xgb_importances = pd.DataFrame({\n\u001b[32m      9\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mfeature\u001b[39m\u001b[33m'\u001b[39m: feature_names,\n\u001b[32m     10\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mimportance\u001b[39m\u001b[33m'\u001b[39m: xgboost_model.feature_importances_\n\u001b[32m     11\u001b[39m }).sort_values(\u001b[33m'\u001b[39m\u001b[33mimportance\u001b[39m\u001b[33m'\u001b[39m, ascending=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m     13\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mTop 10 Features - Random Forest:\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'feature_names' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"TOP FEATURES SUMMARY\\n\")\n",
+    "\n",
+    "rf_importances = pd.DataFrame({\n",
+    "    'feature': feature_names,\n",
+    "    'importance': random_forest_model.feature_importances_\n",
+    "}).sort_values('importance', ascending=False)\n",
+    "\n",
+    "xgb_importances = pd.DataFrame({\n",
+    "    'feature': feature_names,\n",
+    "    'importance': xgboost_model.feature_importances_\n",
+    "}).sort_values('importance', ascending=False)\n",
+    "\n",
+    "print(\"\\nTop 10 Features - Random Forest:\")\n",
+    "print(rf_importances.head(10)[['feature', 'importance']].to_string(index=False))\n",
+    "\n",
+    "print(\"\\nTop 10 Features - XGBoost:\")\n",
+    "print(xgb_importances.head(10)[['feature', 'importance']].to_string(index=False))"
+   ]
   }
  ],
  "metadata": {
